--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,8 @@
     <header>
       <nav class="nav">
         <div class="nav-main-name">
-          <a href="index.html"><img src="assets/svg/tgj_new_logo(white).svg" class="tgj-logo" alt="tgj_logo"></a>
-          <h1><a href="index.html">the<span>graphic</span>jar</a></h1>
+          <a href="index.html"><img src="../../assets/svg/tgj_new_logo(white).svg" class="tgj-logo" alt="tgj_logo">
+          <h1>the<span>graphic</span>jar</h1></a>
         </div>
         <div class="nav-icon">
           <i class="fa fa-bars"></i>
@@ -46,7 +46,7 @@
         <div class="client__info">
           <h4 class="client__info-name">Tell Their Stories</h4>
           <p class="client__info-desc">Tell their Stories is a multi-media project that aims to give a voice to individuals who have been affected by mass incarceration.</p>
-          <a href="tell-their-stories.html" class="client__info-link">Learn More <span>&rarr;</span></a>
+          <a href="public/clients-page/tell-their-stories.html" class="client__info-link">Learn More <span>&rarr;</span></a>
         </div>
       </div>
       <div class="client__selector">
@@ -74,10 +74,16 @@
     <footer class="footer">
       <div class="footer-info">
         <img class="footer-image" src="assets/svg/tgj_new_logo(white).svg">
-        <div class="footer-link"><a href="##">About Us</a></div>
-        <div class="footer-link"><a href="##">Terms and Agreement</a></div>
-        <div class="footer-link"><a href="##">More FAQ</a></div>
-        <div class="footer-link"><a href="contact.html">Contact Us</a></div>
+        <div class="footer-social">
+          <img src="assets/svg/facebook-logo.svg" alt="facebook logo">
+          <img src="assets/svg/instagram.svg" alt="instagram">
+        </div>
+        <ul class="footer-list">
+          <li class="footer-list-link"><a href="info-pages/about.html">About Us</a></li>
+          <li class="footer-list-link"><a href="info-pages/policy.html">TGJ Policies</a></li>
+          <li class="footer-list-link"><a href="info-pages/faq.html">More FAQ</a></li>
+          <li class="footer-list-link"><a href="contact.html">Contact Us</a></li>
+        </ul>
       </div>
     </footer>
     <!-- Bootstrap JS -->
