--- a/public/clients-page/gusto-di-roma.html
+++ b/public/clients-page/gusto-di-roma.html
@@ -4,14 +4,14 @@
     <title>The Graphic Jar</title>
     <meta charset="UTF-8">
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/ico" href="assets/favicon/favicon.ico"/>
+    <link rel="shortcut icon" type="image/ico" href="../../assets/favicon/favicon.ico"/>
     <!-- <meta http-equiv="refresh" content="5"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- External CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/clientss.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/clientss.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/style.css">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500|Source+Sans+Pro" rel="stylesheet">
     <!-- Font Awesome Icons -->
@@ -22,8 +22,8 @@
     <header>
       <nav class="nav">
         <div class="nav-main-name">
-          <a href="index.html"><img src="assets/svg/tgj_new_logo(white).svg" class="tgj-logo" alt="tgj_logo"></a>
-          <h1><a href="index.html">the<span>graphic</span>jar</a></h1>
+          <a href="../../index.html"><img src="../../assets/svg/tgj_new_logo(white).svg" class="tgj-logo" alt="tgj_logo">
+          <h1>the<span>graphic</span>jar</h1></a>
         </div>
         <div class="nav-icon">
           <i class="fa fa-bars"></i>
@@ -33,44 +33,48 @@
         </div>
         <div class="nav-links">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a class="active" href="../../projects.html">Projects</a></li>
+            <li><a href="../../contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
     <main class="project">
       <div class="project__detail">
-        <img class="project__detail-image" src="assets/images/projects/project-2/project-2.jpg" alt="Green Goddess Gardens">
-        <h4 class="project__detail-title">Green Goddess Gardens</h4>
+        <img class="project__detail-image" src="../../assets/images/projects/project-4/project-4.png" alt="Green Goddess Gardens">
+        <h4 class="project__detail-title">Gusto di Roma</h4>
         <p class="project__detail-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam sint, molestiae eaque, repellendus doloribus, placeat illo quaerat tempora aperiam ducimus perspiciatis eum ut, nesciunt sunt dolorem! Facilis dignissimos, nisi molestias!</p>
-        <p class="project__detail-desc">Project: Branding Package (Logo, Logo Variation)</p>
-        <p class="project__detail-desc">Timeline: 3 Weeks</p>
+        <p class="project__detail-desc">Project: Main Logo</p>
+        <p class="project__detail-desc">Timeline: 2 Weeks</p>
       </div>
       <div class="project__concepts">
         <h5 class="project__concepts-title">Initial Concepts</h5>
-        <img class="project__concepts-image" src="assets/images/projects/project-1/concept-1.jpg" alt="Concept 1">
-        <img class="project__concepts-image" src="assets/images/projects/project-1/concept-2.jpg" alt="Concept 2">
-        <img class="project__concepts-image" src="assets/images/projects/project-1/concept-3.jpg" alt="Concept 3">
-        <img class="project__concepts-image" src="assets/images/projects/project-1/concept-4.jpg" alt="Concept 4">
-        <img class="project__concepts-image" src="assets/images/projects/project-1/concept-5.jpg" alt="Concept 5">
+        <img class="project__concepts-image" src="../../assets/images/projects/project-2/concept-1.png" alt="Concept 1">
+        <img class="project__concepts-image" src="../../assets/images/projects/project-2/concept-2.png" alt="Concept 2">
+        <img class="project__concepts-image" src="../../assets/images/projects/project-2/concept-3.png" alt="Concept 3">
+        <img class="project__concepts-image" src="../../assets/images/projects/project-2/concept-4.png" alt="Concept 4">
       </div>
       <div class="project__final">
         <h5 class="project__final-title">Final Designs</h5>
-        <img class="project__final-image" src="assets/images/projects/project-1/final-1.jpg" alt="Final 1">
-        <img class="project__final-image" src="assets/images/projects/project-1/final-2.jpg" alt="Final 2">
-        <img class="project__final-image" src="assets/images/projects/project-1/final-3.jpg" alt="Final 3">
+        <img class="project__final-image" src="../../assets/images/projects/project-2/final-1.jpg" alt="Final 1">
+        <img class="project__final-image" src="../../assets/images/projects/project-2/final-2.jpg" alt="Final 2">
       </div>
     </main>
     <!-- footer -->
     <footer class="footer">
       <div class="footer-info">
-        <img class="footer-image" src="assets/svg/tgj_new_logo(white).svg">
-        <div class="footer-link"><a href="##">About Us</a></div>
-        <div class="footer-link"><a href="##">Terms and Agreement</a></div>
-        <div class="footer-link"><a href="##">More FAQ</a></div>
-        <div class="footer-link"><a href="contact.html">Contact Us</a></div>
+        <img class="footer-image" src="../../assets/svg/tgj_new_logo(white).svg">
+        <div class="footer-social">
+          <img src="../../assets/svg/facebook-logo.svg" alt="facebook logo">
+          <img src="../../assets/svg/instagram.svg" alt="instagram">
+        </div>
+        <ul class="footer-list">
+          <li class="footer-list-link"><a href="info-pages/about.html">About Us</a></li>
+          <li class="footer-list-link"><a href="info-pages/policy.html">TGJ Policies</a></li>
+          <li class="footer-list-link"><a href="info-pages/faq.html">More FAQ</a></li>
+          <li class="footer-list-link"><a href="contact.html">Contact Us</a></li>
+        </ul>
       </div>
     </footer>
     <!-- Bootstrap JS -->
@@ -81,6 +85,6 @@
     <!-- firebase query -->
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <!-- javascript file -->
-    <script type="text/javascript" src="assets/js/javascript.js"></script>
+    <script type="text/javascript" src="../../assets/js/javascript.js"></script>
   </body>
 </html>
