--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     <header>
       <nav class="nav">
         <div class="nav-main-name">
-          <a href="index.html"><img src="assets/svg/tgj_new_logo(white).svg" class="tgj-logo" alt="tgj_logo"></a>
-          <h1><a href="index.html">the<span>graphic</span>jar</a></h1>
+          <a href="index.html"><img src="../../assets/svg/tgj_new_logo(white).svg" class="tgj-logo" alt="tgj_logo">
+          <h1>the<span>graphic</span>jar</h1></a>
         </div>
         <div class="nav-icon">
           <i class="fa fa-bars"></i>
@@ -68,17 +68,24 @@
           <div class="design-button" id="nav-button">
             <button class="start-design"><span>Start Design</span></button>
           </div>
+          <p>Have any questions? Email us anytime at <span class="email">thegraphicar@gmail.com</span> and we'll help you right away.</p>
         </div>
       </div>
     </section>
     <footer class="footer">
-      <div class="footer-info">
-        <img class="footer-image" src="assets/svg/tgj_new_logo(white).svg">
-        <div class="footer-link"><a href="##">About Us</a></div>
-        <div class="footer-link"><a href="##">Terms and Agreement</a></div>
-        <div class="footer-link"><a href="##">More FAQ</a></div>
-        <div class="footer-link"><a href="contact.html">Contact Us</a></div>
-      </div>
+        <div class="footer-info">
+          <img class="footer-image" src="assets/svg/tgj_new_logo(white).svg">
+          <ul class="footer-list">
+            <li class="footer-list-link"><a href="public/info-pages/about.html">About Us</a></li>
+            <li class="footer-list-link"><a href="public/info-pages/policies.html">TGJ Policies</a></li>
+            <li class="footer-list-link"><a href="public/info-pages/faq.html">More FAQ</a></li>
+            <li class="footer-list-link"><a href="contact.html">Contact Us</a></li>
+          </ul>
+          <div class="footer-social">
+            <img src="assets/svg/facebook-logo.svg" alt="facebook logo">
+            <img src="assets/svg/instagram.svg" alt="instagram">
+          </div>
+        </div>
     </footer>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
