--- a/projects.html
+++ b/projects.html
@@ -2,173 +2,202 @@
 <html>
   <head>
     <title>The Graphic Jar</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/ico" href="assets/favicon/favicon.ico"/>
+    <link href="assets/favicon/favicon.ico" rel="shortcut icon" type="image/ico"/>
     <!-- <meta http-equiv="refresh" content="5"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"/>
     <!-- External CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500|Source+Sans+Pro" rel="stylesheet"/>
     <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
   </head>
   <body>
     <!-- navigation bar -->
     <header>
-			<nav class="nav">
-				<a href="index.html" class="nav_brand">
-					<img src="assets/svg/tgj_new_logo(white).svg" class="nav_brand-logo" alt="tgj_logo">
-					<h1 class="nav_brand-name">the<span>graphic</span>jar</h1>
-				</a>
-				<div class="nav-icon">
-					<i class="fa fa-bars"></i>
-				</div>
-				<div class="design-button" id="nav-button">
-					<a href="contact.html">
-						<button class="start-design"><span>Contact Us</span></button>
-					</a>
-				</div>
-				<ul class="nav-links">
-					<li><a href="index.html">Home</a></li>
-					<li><a class="active" href="projects.html">Projects</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-		<main class="projects">
-			<section class="projects_banner">
-				<div class="projects_banner-box">
-					<img src="assets/svg/tgj_jar.svg" alt="TGJ Jar" class="projects_banner-image">
-					<div class="insert"></div>
-					<!-- <div class="projects_banner-info">
+      <input class="nav-checkbox" hidden id="nav-hamburger" type="checkbox"/>
+      <nav class="nav">
+        <div class="nav_mobile">
+          <a class="nav_brand" href="index.html">
+            <img alt="tgj_logo" class="nav_brand-logo" src="assets/svg/tgj_new_logo.svg"/>
+            <h1 class="nav_brand-name">the<span>graphic</span>jar</h1>
+          </a>
+          <label class="nav-icon" for="nav-hamburger">
+            <i class="fa fa-bars"></i>
+          </label>
+          <div class="nav_mobile-elements">
+            <ul class="nav-links">
+              <li>
+                <a href="index.html">Home</a>
+              </li>
+              <li>
+                <a href="projects.html">Projects</a>
+              </li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="nav-desktop">
+          <a class="nav_brand" href="index.html">
+            <img alt="tgj_logo" class="nav_brand-logo" src="assets/svg/tgj_new_logo(white).svg"/>
+            <h1 class="nav_brand-name">the<span>graphic</span>jar</h1>
+          </a>
+          <div class="design-button-container">
+            <div class="design-button" id="nav-button">
+              <a href="contact.html">
+                <button class="start-design">
+                  <span>Contact Us</span>
+                </button>
+              </a>
+            </div>
+          </div>
+          <ul class="nav-links">
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a class="active" href="projects.html">Projects</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="projects">
+      <section class="projects_banner">
+        <div class="projects_banner-box">
+          <img alt="TGJ Jar" class="projects_banner-image" src="assets/svg/tgj_jar.svg"/>
+          <div class="insert"></div>
+          <!-- <div class="projects_banner-info">
 						<div class="projects_banner-rotate">
 							<p class="bold projects_banner-rotate-1">Current</p>
 							<p class="bold projects_banner-rotate-2">Finished</p>
 							<p class="bold projects_banner-rotate-3">TGJ</p>
 						</div> -->
-						<p class="bold projects_banner-secondary tu">Projects</p>
-					<!-- </div> -->
-				</div>
-			</section>
-			<section class="projects_sec">
-				<h3 class="projects_sec-title bold tu">Current Projects</h3>
-				<div class="projects_sec-proj">
-					<div class="card-flip">
-						<div class="card-flip_side card-flip_side-front tu bold">
-							<p class="projects_sec-proj-title">Nancy Fareed Moreno</p>
-						</div>
-						<div class="card-flip_side card-flip_side-back">
-							<div>
-								<p class="tu bold">Project Details</p>
-								<ul class="tu bold">
-									<li>Custom Logo</li>
-									<li>Business Card</li>
-									<li>Website</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="card-flip">
-						<div class="card-flip_side card-flip_side-front tu bold">
-							<p class="projects_sec-proj-title">Soldiers Softball Team</p>
-						</div>
-						<div class="card-flip_side card-flip_side-back">
-							<div>
-								<p class="tu bold">Project Details</p>
-								<ul class="tu bold">
-									<li>Custom Logo</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-				<h3 class="projects_sec-title bold tu">Finished Projects</h3>
-				<div class="projects_sec-proj">
-					<div class="projects_sec-box">
-						<a href="public/clients-page/tell-their-stories.html" class="projects_sec-link">
-							<p class="projects_sec-client tu bold">Tell Their Stories</p>
-							<div class="projects_sec-image" id="stories">
-							</div>
-						</a>
-					</div>
-					<div class="projects_sec-box">
-						<a href="public/clients-page/the-forest-floor.html" class="projects_sec-link">
-							<p class="projects_sec-client tu bold">The Forest Floor</p>
-							<div class="projects_sec-image" id="forest">
-							</div>
-						</a>
-					</div>
-					<div class="projects_sec-box">
-						<a href="public/clients-page/gusto-di-roma.html" class="projects_sec-link">
-							<p class="projects_sec-client tu bold">Gusto Di Roma</p>
-							<div class="projects_sec-image" id="gusto">
-							</div>
-						</a>
-					</div>
-					<div class="projects_sec-box">
-						<a href="public/clients-page/green-goddess-gardens.html" class="projects_sec-link">
-							<p class="projects_sec-client tu bold">Green Goddess Gardens</p>
-							<div class="projects_sec-image" id="gardens">
-							</div>
-						</a>
-					</div>
-				</div>
-			</section>
-			<section class="projects_tgj">
-				<div class="projects_tgj-container">
-					<div class="projects_tgj-header">
-						<p class="projects_tgj-title bold tu">TGJ</p>
-						<p class="projects_tgj-title bold tu">Projects</p>
-					</div>
-					<div class="projects_tgj-image" id="illustration_1">
-					</div>
-					<div class="projects_tgj-image" id="illustration_2">
-					</div>
-					<div class="projects_tgj-image" id="illustration_3">
-					</div>
-					<div class="projects_tgj-image" id="illustration_4">
-					</div>
-					<div class="projects_tgj-image" id="illustration_5">
-					</div>
-					<div class="projects_tgj-image" id="illustration_6">
-					</div>
-					<div class="projects_tgj-image" id="illustration_7">
-					</div>
-				</div>
-			</section>
-		</main>
+          <p class="bold projects_banner-secondary tu">Projects</p>
+          <!-- </div> -->
+        </div>
+      </section>
+      <section class="projects_sec">
+        <h3 class="projects_sec-title bold tu">Current Projects</h3>
+        <div class="projects_sec-proj">
+          <div class="card-flip">
+            <div class="card-flip_side card-flip_side-front tu bold">
+              <p class="projects_sec-proj-title">Nancy Fareed Moreno</p>
+            </div>
+            <div class="card-flip_side card-flip_side-back">
+              <div>
+                <p class="tu bold">Project Details</p>
+                <ul class="tu bold">
+                  <li>Custom Logo</li>
+                  <li>Business Card</li>
+                  <li>Website</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card-flip">
+            <div class="card-flip_side card-flip_side-front tu bold">
+              <p class="projects_sec-proj-title">Soldiers Softball Team</p>
+            </div>
+            <div class="card-flip_side card-flip_side-back">
+              <div>
+                <p class="tu bold">Project Details</p>
+                <ul class="tu bold">
+                  <li>Custom Logo</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <h3 class="projects_sec-title bold tu">Finished Projects</h3>
+        <div class="projects_sec-proj">
+          <div class="projects_sec-box">
+            <a class="projects_sec-link" href="public/clients-page/tell-their-stories.html">
+              <p class="projects_sec-client tu bold">Tell Their Stories</p>
+              <div class="projects_sec-image" id="stories"></div>
+            </a>
+          </div>
+          <div class="projects_sec-box">
+            <a class="projects_sec-link" href="public/clients-page/the-forest-floor.html">
+              <p class="projects_sec-client tu bold">The Forest Floor</p>
+              <div class="projects_sec-image" id="forest"></div>
+            </a>
+          </div>
+          <div class="projects_sec-box">
+            <a class="projects_sec-link" href="public/clients-page/gusto-di-roma.html">
+              <p class="projects_sec-client tu bold">Gusto Di Roma</p>
+              <div class="projects_sec-image" id="gusto"></div>
+            </a>
+          </div>
+          <div class="projects_sec-box">
+            <a class="projects_sec-link" href="public/clients-page/green-goddess-gardens.html">
+              <p class="projects_sec-client tu bold">Green Goddess Gardens</p>
+              <div class="projects_sec-image" id="gardens"></div>
+            </a>
+          </div>
+        </div>
+      </section>
+      <section class="projects_tgj">
+        <div class="projects_tgj-container">
+          <div class="projects_tgj-header">
+            <p class="projects_tgj-title bold tu">TGJ</p>
+            <p class="projects_tgj-title bold tu">Projects</p>
+          </div>
+          <div class="projects_tgj-image" id="illustration_1"></div>
+          <div class="projects_tgj-image" id="illustration_2"></div>
+          <div class="projects_tgj-image" id="illustration_3"></div>
+          <div class="projects_tgj-image" id="illustration_4"></div>
+          <div class="projects_tgj-image" id="illustration_5"></div>
+          <div class="projects_tgj-image" id="illustration_6"></div>
+          <div class="projects_tgj-image" id="illustration_7"></div>
+        </div>
+      </section>
+    </main>
     <!-- footer -->
     <footer class="footer">
-			<div class="footer-info">
-				<img class="footer-image" src="assets/svg/tgj_new_logo(white).svg">
-				<ul class="footer-list">
-					<li class="footer-list-link"><a href="public/info-pages/about.html">About Us</a></li>
-					<li class="footer-list-link"><a href="public/info-pages/policies.html">TGJ Policies</a></li>
-					<li class="footer-list-link"><a href="public/info-pages/faq.html">More FAQ</a></li>
-					<li class="footer-list-link"><a href="contact.html">Contact Us</a></li>
-				</ul>
-				<div class="footer-social">
-					<a href="https://www.facebook.com/thegraphicjar/" target="_blank">
-						<img src="assets/svg/facebook-logo.svg" alt="facebook logo">
-					</a>
-					<a href="https://www.instagram.com/thegraphicjar/?hl=en" target="_blank">
-						<img src="assets/svg/instagram.svg" alt="instagram">
-					</a>
-				</div>
-			</div>
+      <div class="footer-info">
+        <img class="footer-image" src="assets/svg/tgj_new_logo(white).svg"/>
+        <ul class="footer-list">
+          <li class="footer-list-link">
+            <a href="public/info-pages/about.html">About Us</a>
+          </li>
+          <li class="footer-list-link">
+            <a href="public/info-pages/policies.html">TGJ Policies</a>
+          </li>
+          <li class="footer-list-link">
+            <a href="public/info-pages/faq.html">More FAQ</a>
+          </li>
+          <li class="footer-list-link">
+            <a href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+        <div class="footer-social">
+          <a href="https://www.facebook.com/thegraphicjar/" target="_blank">
+            <img alt="facebook logo" src="assets/svg/facebook-logo.svg"/>
+          </a>
+          <a href="https://www.instagram.com/thegraphicjar/?hl=en" target="_blank">
+            <img alt="instagram" src="assets/svg/instagram.svg"/>
+          </a>
+        </div>
+      </div>
     </footer>
     <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- firebase query -->
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <!-- javascript file -->
-    <script type="text/javascript" src="assets/js/javascript.js"></script>
+    <script src="assets/js/javascript.js" type="text/javascript"></script>
   </body>
 </html>
