--- a/public/clients-page/gusto-di-roma.html
+++ b/public/clients-page/gusto-di-roma.html
@@ -20,24 +20,64 @@
   <body>
     <!-- navigation bar -->
     <header>
+			<input class="nav-checkbox" hidden id="nav-hamburger" type="checkbox"/>
 			<nav class="nav">
-				<a href="../../index.html" class="nav_brand">
-					<img src="../../assets/svg/tgj_new_logo(white).svg" class="nav_brand-logo" alt="tgj_logo">
-					<h1 class="nav_brand-name">the<span>graphic</span>jar</h1>
-				</a>
-				<div class="nav-icon">
-					<i class="fa fa-bars"></i>
-				</div>
-				<div class="design-button" id="nav-button">
-					<a href="../../contact.html">
-						<button class="start-design"><span>Contact Us</span></button>
+				<div class="nav_mobile">
+					<a class="nav_brand" href="../../index.html">
+						<img
+							alt="tgj_logo"
+							class="nav_brand-logo"
+							src="../../assets/svg/tgj_new_logo.svg"
+						/>
+						<h1 class="nav_brand-name">the<span>graphic</span>jar</h1>
 					</a>
+					<label class="nav-icon" for="nav-hamburger">
+						<i class="fa fa-bars"></i>
+					</label>
+					<div class="nav_mobile-elements">
+						<ul class="nav-links">
+							<li>
+								<a href="../../index.html">Home</a>
+							</li>
+							<li>
+								<a href="../../projects.html">Projects</a>
+							</li>
+							<li>
+								<a href="../../contact.html">Contact</a>
+							</li>
+						</ul>
+					</div>
 				</div>
-				<ul class="nav-links">
-					<li><a href="../../index.html">Home</a></li>
-					<li><a class="active" href="../../projects.html">Projects</a></li>
-					<li><a href="../../contact.html">Contact</a></li>
-				</ul>
+				<div class="nav-desktop">
+					<a class="nav_brand" href="../../index.html">
+						<img
+							alt="tgj_logo"
+							class="nav_brand-logo"
+							src="../../assets/svg/tgj_new_logo(white).svg"
+						/>
+						<h1 class="nav_brand-name">the<span>graphic</span>jar</h1>
+					</a>
+					<div class="design-button-container">
+						<div class="design-button" id="nav-button">
+							<a href="../../contact.html">
+								<button class="start-design">
+									<span>Contact Us</span>
+								</button>
+							</a>
+						</div>
+					</div>
+					<ul class="nav-links">
+						<li>
+							<a href="../../index.html">Home</a>
+						</li>
+						<li>
+							<a href="../../projects.html">Projects</a>
+						</li>
+						<li>
+							<a href="../../contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
 			</nav>
     </header>
     <main class="project">
